--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -5,7 +5,9 @@
     align-items: center;
     justify-content: space-between;
     padding: 1rem 0 1rem 2rem;
-    position: relative;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 
 .logo {
