--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import "../node_modules/intl-tel-input/build/css/intlTelInput.css";
+
 * {
     margin: 0;
     padding: 0;
@@ -19,4 +21,19 @@
 
 body {
     font-family: var(--font-poppins);
+}
+
+.iti{
+    height: 100%;
+}
+.custom{
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 1px 2px 5px 0px rgba(165, 165, 165, 0.34);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
