--- a/src/app/components/activity-details/activity-details.component.html
+++ b/src/app/components/activity-details/activity-details.component.html
@@ -37,6 +37,7 @@
             <input type="text" ngxDaterangepickerMd [(ngModel)]="selected" class="form-control" id="date_input" />
         </div>
     </div>
+    <div class="table_wrapper">
     <table>
         <thead>
             <tr>
@@ -79,4 +80,5 @@
             </tr>
         </tbody>
     </table>
+</div>
 </div>
