--- a/src/app/block-list/block-list.component.html
+++ b/src/app/block-list/block-list.component.html
@@ -29,6 +29,7 @@
             </div>
         </div>
 
+        <div class="table_wrapper">
         <table>
             <thead>
                 <tr>
@@ -72,5 +73,6 @@
                 </tr>
             </tbody>
         </table>
+    </div>
     </div>
 </main>
