--- a/src/app/components/messages-sidebar/messages-sidebar.component.css
+++ b/src/app/components/messages-sidebar/messages-sidebar.component.css
@@ -146,3 +146,13 @@
         object-fit: contain;
     }
 }
+
+@media screen and (max-width: 976px) {
+    .sidebar{
+        position: sticky;
+        top: 160px;
+    }
+    .full{
+        position: absolute;
+    }
+}
