--- a/src/app/components/stats/stats.component.html
+++ b/src/app/components/stats/stats.component.html
@@ -12,7 +12,7 @@
                 </div>
             </div>
         </div>
-
+<div class="table_wrapper">
         <table class="table">
             <thead>
                 <tr>
@@ -46,5 +46,6 @@
                 </tr>
             </tbody>
         </table>
+        </div>
     </div>
 </div>
