--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -106,6 +106,9 @@
 .d_card .status.active {
     background-color: #0B7A60;
 }
+.mobile{
+    display: none;
+}
 
 @media screen and (max-width: 1500px) {
     .container {
@@ -123,5 +126,17 @@
 
     .d_body {
         margin-top: .7rem;
+    }
+}
+
+@media screen and (max-width: 976px) {
+    .container{
+        display: none;
+    }
+    .mobile{
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
     }
 }
