--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="isPcView">
     <div class="left">
         <app-reports></app-reports>
         <app-activity-details></app-activity-details>
@@ -50,7 +50,7 @@
     </div>
 </div>
 
-<div class="mobile">
+<div class="mobile" *ngIf="!isPcView">
     <app-stats></app-stats>
     <app-reports></app-reports>
     <div class="devices">
