--- a/src/app/components/stats/stats.component.css
+++ b/src/app/components/stats/stats.component.css
@@ -7,7 +7,6 @@
 .stats_header {
     padding: 18px 25px;
     border-radius: 5px;
-    border-bottom: 1px solid #e2e2e2;
     background: #FFF;
 }
 
@@ -74,7 +73,8 @@
     line-height: normal;
     margin-top: .75rem;
 }
-.table_wrapper{
+
+.table_wrapper {
     width: 100%;
     margin-top: 1rem;
     border-radius: 10px;
@@ -164,28 +164,87 @@
         font-size: .8rem;
     }
 }
-
+.table_wrapper.mobile_view{
+    display: none;
+}
 @media screen and (max-width: 976px) {
-    .cards{
+    .stats{
+        box-shadow: none;
+    }
+    .stats_header{
+        padding: 1rem 0;
+    }
+    .stats_body{
+        padding: 0;
+    }
+    .cards {
         flex-wrap: wrap;
     }
+
     .card,
-    .card.row{
-        padding:  1rem;
+    .card.row {
+        padding: 1rem;
         width: 100%;
         min-width: 270px;
     }
+
     .card img,
-    .card.row img{
+    .card.row img {
         height: 70px;
         width: 70px;
     }
+
     .card p,
-    .card.row p{
+    .card.row p {
         font-size: .8rem;
     }
+
     .card h5,
-    .card.row h5{
+    .card.row h5 {
         font-size: 1.3rem;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .cards {
+        display: grid;
+        grid-template-columns: 2fr 2fr;
+    }
+
+    .card:nth-child(1) {
+        grid-column: span 2;
+    }
+
+    .card:nth-child(2),
+    .card:nth-child(3) {
+        grid-column: span 1;
+        flex-direction: column;
+        align-items: flex-start;
+        min-width: 0px;
+    }
+
+    .card:nth-child(2) p,
+    .card:nth-child(3) p {
+        font-size: .7rem;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .table_wrapper.pc_view{
+display: none;
+    }
+    .table_wrapper.mobile_view{
+        display: flex;
+        flex-direction: column;
+    }
+    .item{
+        padding: 1rem;
+        border-bottom: rgb(180, 180, 180);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .item span {
+        width: 70px;
     }
 }
