--- a/src/app/components/activity-details/activity-details.component.css
+++ b/src/app/components/activity-details/activity-details.component.css
@@ -1,9 +1,19 @@
 .data_table {
     margin-top: 1rem;
-    border-radius: 5px;
+    border-radius: 10px;
     background: #FFF;
     box-shadow: 1px 2px 5px 0px rgba(165, 165, 165, 0.34);
     padding: .7rem;
+}
+
+.data_table h4 {
+    color: #161616;
+    font-family: var(--jakarta);
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-bottom: 1.5rem;
 }
 
 .dt_header {
@@ -114,7 +124,8 @@
     border-radius: 10px;
     overflow: auto;
 }
-.table_wrapper table{
+
+.table_wrapper table {
     min-width: 800px;
     width: 100%;
 }
@@ -145,16 +156,136 @@
     text-align: center;
 }
 
+.table_wrapper.mobile_view {
+    display: none;
+}
+
 @media screen and (max-width: 976px) {
- .dt_header{
-    padding: .5rem;
-    flex-direction: column;
-    align-items: stretch;
-    gap: 1.5rem;
- }   
- .buttons_group{
-    order: 2;
-    overflow: auto;
-    padding-bottom: .7rem;
- }
+    .data_table {
+        padding: 0;
+        box-shadow: none;
+    }
+
+    .dt_header {
+        padding: .5rem;
+        flex-direction: column-reverse;
+        align-items: stretch;
+        gap: 1.5rem;
+    }
+
+    .buttons_group {
+        order: 2;
+        overflow: auto;
+        padding-bottom: .7rem;
+    }
+
+    #date_input {
+        width: 300px;
+    }
+
+    .search_and_date {
+        width: 100%;
+    }
+
+    .search {
+        width: 100%;
+    }
+
+    .search input {
+        width: 100%;
+    }
+
+    .table_wrapper.mobile_view {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .table_wrapper.pc_view {
+        display: none;
+    }
+
+    .item {
+        padding: 1rem;
+        box-shadow: 0px 0px 1px 0px rgba(165, 165, 165, 0.34);
+        border-radius: 10px;
+        border: 1px solid #d8d8d8;
+        display: grid;
+        grid-template-rows: auto 0;
+        overflow: hidden;
+    }
+
+    .open {
+        grid-template-rows: auto auto;
+    }
+
+    .item .top {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .open .top {
+        margin-bottom: 1rem;
+    }
+
+    .left h5 {
+        font-size: 1rem;
+        max-width: 70vw;
+        font-weight: 600;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        margin-bottom: -4px;
+    }
+
+    .left span {
+        font-size: .7rem;
+        color: #5e5e5e;
+    }
+
+    .right {
+        display: flex;
+        align-items: center;
+        gap: .6rem;
+    }
+
+    .badge {
+        background-color: green;
+        color: white;
+        border-radius: 6px;
+        padding: 3px 8px;
+        font-size: .6rem;
+    }
+
+    .chevron {
+        font-size: 1.5rem;
+        font-family: 'Courier New', Courier, monospace;
+        transition: 200ms;
+    }
+
+    .chevron.rotate {
+        rotate: 90deg;
+    }
+
+    .bottom {
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        overflow: hidden;
+        gap: 1rem;
+        grid-template-columns: repeat(2, 1fr);
+        transition: 1rem;
+    }
+
+    .bottom div {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .bottom div:nth-child(even) {
+        text-align: right;
+    }
+
+    .bottom div strong,
+    .bottom div span {
+        font-size: .8rem;
+    }
 }
