--- a/src/app/components/stats/stats.component.html
+++ b/src/app/components/stats/stats.component.html
@@ -12,40 +12,75 @@
                 </div>
             </div>
         </div>
-<div class="table_wrapper">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th><strong>Channels</strong></th>
-                    <th><strong>Today</strong></th>
-                    <th><strong>15</strong> min</th>
-                    <th><strong>30</strong> min</th>
-                    <th><strong>60</strong> min</th>
-                    <th><strong>12</strong> hours</th>
-                    <th><strong>24</strong> hours</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Whatsapp</td>
-                    <td>Today</td>
-                    <td>15 min</td>
-                    <td>30 min</td>
-                    <td>60 min</td>
-                    <td>12 hours</td>
-                    <td>24 hours</td>
-                </tr>
-                <tr>
-                    <td>SMS</td>
-                    <td>Today</td>
-                    <td>15 min</td>
-                    <td>30 min</td>
-                    <td>60 min</td>
-                    <td>12 hours</td>
-                    <td>24 hours</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="table_wrapper pc_view">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th><strong>Channels</strong></th>
+                        <th><strong>Today</strong></th>
+                        <th><strong>15</strong> min</th>
+                        <th><strong>30</strong> min</th>
+                        <th><strong>60</strong> min</th>
+                        <th><strong>12</strong> hours</th>
+                        <th><strong>24</strong> hours</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Whatsapp</td>
+                        <td>Today</td>
+                        <td>15 min</td>
+                        <td>30 min</td>
+                        <td>60 min</td>
+                        <td>12 hours</td>
+                        <td>24 hours</td>
+                    </tr>
+                    <tr>
+                        <td>SMS</td>
+                        <td>Today</td>
+                        <td>15 min</td>
+                        <td>30 min</td>
+                        <td>60 min</td>
+                        <td>12 hours</td>
+                        <td>24 hours</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="table_wrapper mobile_view">
+            <div class="item">
+                <span>
+                    <strong>Whatsapp</strong>
+                </span>
+                <span>
+                    <strong>SMS</strong>
+                </span>
+                <span>
+                    <strong>Time</strong>
+                </span>
+            </div>
+            <div class="item">
+                <span>
+                    45 msgs
+                </span>
+                <span>
+                    23 msgs
+                </span>
+                <span>
+                    30 min
+                </span>
+            </div>
+            <div class="item">
+                <span>
+                    45 msgs
+                </span>
+                <span>
+                    23 msgs
+                </span>
+                <span>
+                    60 min
+                </span>
+            </div>
         </div>
     </div>
 </div>
