--- a/src/app/devices/devices.component.css
+++ b/src/app/devices/devices.component.css
@@ -194,14 +194,13 @@
 
 .table_card {
     flex: 1;
-    border-radius: 5px;
+    border-radius: 10px;
     background: #FFF;
     box-shadow: 1px 2px 5px 0px rgba(165, 165, 165, 0.34);
 }
 
 .tc_header {
     border-radius: 5px;
-    border-bottom: 1px solid #B5B5B5;
     background: #FFF;
     padding: 1rem;
 }
@@ -222,8 +221,6 @@
 
 .tc_body table {
     border-radius: 5px;
-    border: 1px solid #E1E1E1;
-    background: #FFF;
     box-shadow: 1px 2px 5px 0px rgba(165, 165, 165, 0.34);
     width: 100%;
     min-width: 450px;
@@ -232,8 +229,6 @@
 .tc_body thead tr {
     border-radius: 5px;
     border-bottom: 1px solid #E1E1E1;
-    background: #FFF;
-    box-shadow: 1px 2px 5px 0px rgba(165, 165, 165, 0.34);
 }
 
 .tc_body th,
@@ -263,7 +258,9 @@
         height: fit-content;
         overflow: auto;
         z-index: 2;
-        top: 160px;
+        position: static;
+        padding: .5rem .5rem 1rem;
+        box-shadow: none;
     }
     .sidebar h4{
         display: none;
@@ -271,8 +268,15 @@
     .sidebar ul {
         flex-direction: row;
     }
+    .sidebar ul  li{
+        min-width: fit-content;
+        padding: .5rem .7rem;
+        gap: .5rem;
+        border-radius: 8px;
+    }
     .banner{
         padding: 1rem 1rem 0;
+        margin: 0;
     }
     .top{
         flex-direction: column-reverse;
@@ -280,13 +284,14 @@
     }
     .t_right{
         align-self: flex-end;
-        gap: 1.5rem;
+        gap: 1rem;
     }
     .banner_img{
         width: 100%;
     }
     .device_content{
-        padding: 250px 1rem 1rem;
+        padding: 230px 0 1rem;
+        box-shadow: none;
     }
     .note{
         padding: 1rem;
