--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -104,6 +104,9 @@
 }
 
 @media screen and (max-width: 976px) {
+    .content{
+        flex-direction: column;
+    }
     .instance_grid{
         display: flex;
         flex-wrap: wrap;
