--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <header class="app_header">
-    <a href="/" class="logo">
+    <a routerLink="/" class="logo">
         <img src="../../../assets/logo.png" alt="taxi-message">
     </a>
     <nav class="navbar">
