--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -14,11 +14,17 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 4rem 0 2rem;
+    background-color: rgba(0, 0, 0, 0.11);
+    backdrop-filter: blur(30px);
 }
 
 .logo img {
     height: 70px;
     object-fit: contain;
+}
+
+.mobile-menu {
+    display: none;
 }
 
 .menu-list {
@@ -112,4 +118,116 @@
     font-size: 1.1rem;
     font-weight: 500;
     cursor: pointer;
+}
+
+@media screen and (max-width: 1500px) {
+    .nav {
+        height: 100px;
+        padding: 0 3rem 0 2rem;
+    }
+
+    .logo img {
+        height: 50px;
+    }
+
+    .menu-list {
+        gap: 2rem;
+    }
+
+    .menu-list li a {
+        font-size: .8rem;
+    }
+
+    .content {
+        height: calc(100vh - 100px);
+    }
+
+    .content form {
+        padding: 2rem;
+    }
+
+    .content h1 {
+        font-size: 1.6rem;
+        margin-bottom: 2rem;
+    }
+
+    .inp_container {
+        margin-bottom: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 976px) {
+    .menu-list {
+        display: none;
+    }
+
+    .mobile-menu {
+        display: flex;
+        position: relative;
+        z-index: 100;
+    }
+
+    .mobile-menu .hamburger {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: .2rem;
+        transition: 250ms;
+        position: relative;
+        z-index: 1;
+    }
+
+    .line {
+        height: 3px;
+        width: 25px;
+        background-color: white;
+        border-radius: 10px;
+        transition: 250ms;
+    }
+
+    .mobile-menu.active .line:nth-child(2) {
+        opacity: 0;
+    }
+
+    .mobile-menu.active .line:nth-child(1) {
+        transform: translateY(5px) rotate(45deg);
+    }
+
+    .mobile-menu.active .line:nth-child(3) {
+        transform: translateY(-9px) rotate(-45deg);
+    }
+
+    .nav {
+        padding: 0 1.25rem 0 1.25rem;
+    }
+
+    .mobile-menu ul {
+        position: absolute;
+        right: -.75rem;
+        padding-top: calc(30px + 1rem);
+        padding-bottom: 1rem;
+        border-radius: 10px;
+        display: flex;
+        gap: 1rem;
+        flex-direction: column;
+        background-color: rgba(255, 255, 255, 0.199);
+        backdrop-filter: blur(30px);
+        top: -300px;
+        opacity: 0;
+        pointer-events: none;
+        transition: 300ms;
+    }
+
+    .mobile-menu.active ul {
+        top: -1rem;
+        opacity: 1;
+        pointer-events: all;
+
+    }
+
+    .mobile-menu li a {
+        padding: 1.5rem;
+        color: white;
+        width: 100%;
+    }
 }
