--- a/src/app/components/activity-details/activity-details.component.css
+++ b/src/app/components/activity-details/activity-details.component.css
@@ -202,6 +202,20 @@
     display: none;
 }
 
+
+@media screen and (max-width: 1400px) and (min-width: 1000px) {
+    .table_wrapper {
+        overflow-x: auto;
+        max-width: 50vw;
+    }
+
+    .dt_header {
+        overflow-x: auto;
+        max-width: 50vw;
+        overflow-y: hidden;
+    }
+}
+
 @media screen and (max-width: 976px) {
     .data_table {
         padding: 0;
