--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
         <div class="user_info">
             <img [src]="menuItems[0].icon" alt="user">
             <div class="ui_details">
-                <strong>JAMES WILLIAM</strong>
+                <strong>{{user?.name}}</strong>
                 <span>
                     TechonVentures
                 </span>
