--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,53 +1,37 @@
-<main class="container">
-    <nav class="nav">
-        <a href="/" class="logo">
-            <img src="../../assets/logo.png" alt="taxi-message">
-        </a>
+<div class="container">
+    <div class="left">
+        <img src="../../assets/img/login-content.png" alt="taxi-message">
+    </div>
+    <div class="right">
+        <form class="form" (ngSubmit)="handleSubmit($event)">
+            <h1>WELCOME BACK</h1>
+            <h2>Welcome Back! Please enter your details.</h2>
 
-        <ul class="menu-list">
-            <li><a routerLink="/login">Home</a></li>
-            <li><a routerLink="/login">About</a></li>
-            <li><a routerLink="/login">Services</a></li>
-            <li><a routerLink="/login">Contact</a></li>
-        </ul>
-
-        <div class="mobile-menu" [class.active]="isMenuOpen">
-            <div class="hamburger" (click)="toggleMenu()">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
+            <div class="inp_con">
+                <label for="username">Username</label>
+                <input type="text" placeholder="Enter your username" id="username" name="username">
             </div>
-            <ul>
-                <li><a routerLink="/login">Home</a></li>
-                <li><a routerLink="/login">About</a></li>
-                <li><a routerLink="/login">Services</a></li>
-                <li><a routerLink="/login">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="content">
-        <form>
-            <h1>Login</h1>
-            <div class="inp_container">
-                <input type="text" placeholder="Username" id="username">
-                <label for="username">
-                    <img src="../../assets/icons/user.svg" alt="">
-                </label>
-            </div>
-            <div class="inp_container" style="margin-bottom: .8rem;">
-                <input type="password" placeholder="Password" id="password">
+            <div class="inp_con">
                 <label for="password">
-                    <img src="../../assets/icons/lock.svg" alt="">
+                    Password
+                    <button type="button" (click)="togglePasswordType()">Hide</button>
                 </label>
+                <input [type]="passwordType" placeholder="Enter your password" id="password" name="password">
             </div>
-            <div class="check">
-                <input type="checkbox" id="remember">
-                <label for="remember">Remember me</label>
+            <div class="rem_res">
+                <div class="remember">
+                    <input type="checkbox" name="remember" id="remember">
+                    <label for="remember">Remember me</label>
+                </div>
+                <div class="reset">
+                    Forgot Password?
+                </div>
             </div>
-            <button class="login_btn">
-                Login
+            <button [disabled]="disabled" type="submit">
+                Sign In
             </button>
+            <div *ngIf="error" class="error">{{error}}</div>
+            <p class="dha">Don't have an account? <a href="/">Sign up for free</a></p>
         </form>
     </div>
-</main>
+</div>
