--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,14 @@
 .container {
     display: flex;
-    gap: 1rem;
     background-color: #f1f1f1;
     min-height: 100vh;
 }
 
 .body-content {
     flex: 1;
+}
+
+.main {
+    padding: 2rem;
+    max-width: 100%;
 }
