--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,47 +1,81 @@
-<nav class="sidebar">
+<nav class="sidebar" [class.toggled]="isToggled">
     <div class="logo">
         <img src="../../../assets/img/logo.png" alt="">
         <h1>Taxi Messages</h1>
     </div>
     <ul class="menu">
-        <li (click)="setCurrentItem('Home')" [class.active]="currentItem === 'Home'" class="menu_item">
-            <span>Home</span>
-        </li>
-        <li (click)="setCurrentItem('Messages')" [class.active]="currentItem === 'Messages'" class="menu_item">
-            <span>Messages</span>
-        </li>
-        <li (click)="setCurrentItem('Blocked')" [class.active]="currentItem === 'Blocked'" class="menu_item">
-            <span>Blocked List</span>
-        </li>
-        <li (click)="setCurrentItem('Devices')" [class.active]="currentItem === 'Devices'" class="menu_item">
-            <span>Devices</span>
-        </li>
-        <li (click)="setCurrentItem('Chatbots')" [class.active]="currentItem === 'Chatbots'" class="menu_item">
-            <span>Chatbots</span>
-        </li>
+        <a [routerLink]="'/'">
+            <li (click)="setCurrentItem('Home')" [class.active]="currentItem === 'Home'" class="menu_item">
+                <div class="icon">i</div>
+                <span>Home</span>
+            </li>
+        </a>
+        <a [routerLink]="'/messages'">
+            <li (click)="setCurrentItem('Messages')" [class.active]="currentItem === 'Messages'" class="menu_item">
+                <div class="icon">i</div>
+                <span>Messages</span>
+            </li>
+        </a>
+        <a [routerLink]="'/block-list'">
+            <li (click)="setCurrentItem('Blocked')" [class.active]="currentItem === 'Blocked'" class="menu_item">
+                <div class="icon">i</div>
+                <span>Blocked List</span>
+            </li>
+        </a>
+        <a [routerLink]="'/devices'">
+            <li (click)="setCurrentItem('Devices')" [class.active]="currentItem === 'Devices'" class="menu_item">
+                <div class="icon">i</div>
+                <span>Devices</span>
+            </li>
+        </a>
+        <a [routerLink]="'/chatbot/analytics'">
+            <li (click)="setCurrentItem('Chatbots')" [class.active]="currentItem === 'Chatbots'" class="menu_item">
+                <div class="icon">i</div>
+                <span>Chatbots</span>
+            </li>
+        </a>
         <ul *ngIf="currentItem === 'Chatbots'" class="sub_menu">
-            <li (click)="setCurrentSubItem('Analytics')" [class.active]="currentSubItem === 'Analytics'"
-                class="sub_menu_item">
-                <span>Analytics</span>
-            </li>
-            <li (click)="setCurrentSubItem('Chat')" [class.active]="currentSubItem === 'Chat'" class="sub_menu_item">
-                <span>Chat Flow</span>
-            </li>
-            <li (click)="setCurrentSubItem('Bookings')" [class.active]="currentSubItem === 'Bookings'"
-                class="sub_menu_item">
-                <span>Bookings</span>
-            </li>
-            <li (click)="setCurrentSubItem('Customers')" [class.active]="currentSubItem === 'Customers'"
-                class="sub_menu_item">
-                <span>Customers</span>
-            </li>
+            <a [routerLink]="'/chatbot/analytics'">
+                <li (click)="setCurrentSubItem('Analytics')" [class.active]="currentSubItem === 'Analytics'"
+                    class="sub_menu_item">
+                    <div class="icon">i</div>
+                    <span>Analytics</span>
+                </li>
+            </a>
+            <a [routerLink]="'/chatbot/chat-flow'">
+                <li (click)="setCurrentSubItem('Chat')" [class.active]="currentSubItem === 'Chat'"
+                    class="sub_menu_item">
+                    <div class="icon">i</div>
+                    <span>Chat Flow</span>
+                </li>
+            </a>
+            <a [routerLink]="'/chatbot/bookings'">
+                <li (click)="setCurrentSubItem('Bookings')" [class.active]="currentSubItem === 'Bookings'"
+                    class="sub_menu_item">
+                    <div class="icon">i</div>
+                    <span>Bookings</span>
+                </li>
+            </a>
+            <a [routerLink]="'/chatbot/customers'">
+                <li (click)="setCurrentSubItem('Customers')" [class.active]="currentSubItem === 'Customers'"
+                    class="sub_menu_item">
+                    <div class="icon">i</div>
+                    <span>Customers</span>
+                </li>
+            </a>
         </ul>
-        <li (click)="setCurrentItem('App')" [class.active]="currentItem === 'App'" class="menu_item">
-            <span>App Settings</span>
-        </li>
-        <li (click)="setCurrentItem('Profile')" [class.active]="currentItem === 'Profile'" class="menu_item">
-            <span>Profile</span>
-        </li>
+        <a [routerLink]="'/settings'">
+            <li (click)="setCurrentItem('App')" [class.active]="currentItem === 'App'" class="menu_item">
+                <div class="icon">i</div>
+                <span>App Settings</span>
+            </li>
+        </a>
+        <a [routerLink]="'/profile'">
+            <li (click)="setCurrentItem('Profile')" [class.active]="currentItem === 'Profile'" class="menu_item">
+                <div class="icon">i</div>
+                <span>Profile</span>
+            </li>
+        </a>
     </ul>
 
     <div class="pro">
@@ -51,7 +85,7 @@
         <button><span>Get Pro</span></button>
     </div>
 
-    <button class="toggle">
+    <button (click)="toggleNavbar()" class="toggle">
         <img src="../../../assets/img/toggle.png" alt="toggle">
     </button>
 </nav>
